fixed button wrapping and spacing

--- a/new-vite-app/src/App.css
+++ b/new-vite-app/src/App.css
@@ -148,6 +148,8 @@ h1, h2{
 .category{
   display: flex;
   gap: 10px;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
 }
 
 .category button{
@@ -155,6 +157,8 @@ h1, h2{
   border: none;
   
 }
+
+
 
 .category button:hover{
   background: rgba(245, 85, 85, 0.5);
@@ -394,6 +398,7 @@ h1{
   border-radius: 40px;
   padding: 20px;
   transition: 1s;
+  margin-bottom: 30px;
 }
 
 p{
@@ -411,7 +416,7 @@ p{
 @media (max-width: 900px) {
   .tooldiv, .languagediv {
     width: 90%;
-    padding: 0; 
+    padding-bottom: 10px; 
   }
 
   .video-wrapper{
